# container-registry-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
blog/: dev-to-container-registry-cli.md
container_registry_cli/: __init__.py  cli.py  demo.py  models.py  parser.py
container_registry_cli/analyzers/: __init__.py  cleanup_engine.py  vuln_scanner.py
container_registry_cli/reporters/: export_reporter.py  terminal_reporter.py
examples/: ci-integration.yaml  cleanup-policy.yaml  full-manifest.yaml  simple-manifest.yaml
tests/: conftest.py  test_analyzers.py  test_cli.py  test_demo.py  test_models.py  test_parser.py  test_reporters.py
