[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "container-registry-cli"
version = "1.1.0"
description = "Container image registry analyzer with cleanup policies And vulnerability scanning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sanjay Sundar Murthy", email = "sanjaysundarmurthy@users.noreply.github.com"}
]
maintainers = [
    {name = "Sanjay Sundar Murthy", email = "sanjaysundarmurthy@users.noreply.github.com"}
]
keywords = [
    "container",
    "registry",
    "docker",
    "acr",
    "ecr",
    "gcr",
    "ghcr",
    "vulnerability",
    "security",
    "cleanup",
    "devops",
    "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/SanjaySundarMurthy/container-registry-cli"
Documentation = "https://github.com/SanjaySundarMurthy/container-registry-cli#readme"
Repository = "https://github.com/SanjaySundarMurthy/container-registry-cli.git"
Issues = "https://github.com/SanjaySundarMurthy/container-registry-cli/issues"
Changelog = "https://github.com/SanjaySundarMurthy/container-registry-cli/blob/main/CHANGELOG.md"

[project.scripts]
container-registry-cli = "container_registry_cli.cli:main"

[tool.setuptools.packages.find]
include = ["container_registry_cli*"]

[tool.setuptools.package-data]
container_registry_cli = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[tool.coverage.run]
source = ["container_registry_cli"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
